# EDH_utils

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
edh_utils/: __main__.py
edh_utils/logging/: __init__.py  logging.py
edh_utils/scryfall/: __init__.py  scryfall.py
edh_utils/set_finder/: __init__.py  set_finder.py
resources/: collection.json  config.toml  sample_deck.txt
tests/set_finder/: test_fetch_card_printings.py  test_ingest.py  test_price_level.py  test_read_collection.py  test_read_settings.py  test_set_finder.py
