[project]
name = "edh-utils"
version = "0.1.0"
description = "Utilities for managing decks and collections of magic the gathering cards."
authors = [
    {name = "Jaymes Winger",email = "rathmere@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.33.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.15.8,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]


[project.scripts]
edh-utils = "edh_utils.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
